@@ -13,6 +13,7 @@ Post v22.06.0
     and ipsec_forceencaps=true (strongswan) to unconditionally enforce
     NAT-T UDP encapsulation. Requires OVS support for IPsec custom tunnel
     options (which will be available in OVS 2.18).
+  - Removed possibility of disabling logical datapath groups.
 
 OVN v22.06.0 - 03 Jun 2022
 --------------------------
